--- a/src/app.css
+++ b/src/app.css
@@ -6,12 +6,29 @@
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--pure-white: #ffffff;
-	--primary-color: #b9c6d2;
-	--secondary-color: #d0dde9;
-	--tertiary-color: #edf0f8;
-	--accent-color: #ff3e00;
-	--heading-color: rgba(0, 0, 0, 0.7);
+	--red: #e74c3c;
+	--dark-red: #c0392b;
+	--blue: #3498db;
+	--dark-blue: #2980b9;
+	--yellow: #f1c40f;
+	--dark-yellow: #f39c12;
+	--turqoise: #1abc9c;
+	--dark-turqoise: #16a085;
+	--green: #2ecc71;
+	--dark-green: #27ae60;
+	--accent-green: #1abc9c;
+	--purple: #9b59b6;
+	--dark-purple: #8e44ad;
+	--orange: #e67e22;
+	--dark-orange: #d35400;
+	--white: #ecf0f1;
+	--dark-white: #bdc3c7;
+	--black: #34495e;
+	--dark-black: #2c3e50;
+	--gray: #95a5a6;
+	--dark-gray: #7f8c8d;
+	--brown: #964b00;
+	--dark-brown: #654321;
 	--text-color: #444444;
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
